--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -17,4 +17,10 @@
     justify-content: center;
     background-color: $backgroundTransparentGray;
     color: $colorSecondary;
+}
+
+.what-we-do {
+    @media screen and (max-width: 1199px) {
+        display: none;
     }
+}
