--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,3 +1,4 @@
+/*
 .hero-section {
   padding: 200px 0;
   text-align: center;
@@ -39,5 +40,86 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  }
+}
+ */
+
+.hero-section {
+  padding: 200px 0;
+  text-align: center;
+  background-color: $backgroundDark;
+  background-image: linear-gradient($backgroundColorGradient, $backgroundColorGradient),
+  url('../images/backgroundimage.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 0 auto;
+  max-width: 1600px;
+  height: 600px;
+
+  &__header {
+  font-size: 26px;
+  font-weight: 900;
+  line-height: 1.6;
+  letter-spacing: 0.06em;
+  color: $colorSecondary;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  width: 365px;
+  }
+
+  &__button {
+  background-color: $colorAccent;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.9;
+  color: $colorSecondary;
+  text-align: center;
+  letter-spacing: 0.06em;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  font-family: inherit;
+  padding: 10px 41px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-section {
+
+    &__header {
+      font-size: 44px;
+      line-height: 1.9;
+      width: 696px;
+    }
+  }
+}
+
+.hero-section {
+    @media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (min-device-pixel-ratio: 2),
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min-resolution: 192dpi),
+only screen and (min-resolution: 2dppx) {
+    .hero-section {
+        background-image: url('../images/backgroundimage@2x.jpg');
+    }
+  }
+      @media
+only screen and (-webkit-min-device-pixel-ratio: 3),
+only screen and (min--moz-device-pixel-ratio: 3),
+only screen and (min-device-pixel-ratio: 3),
+only screen and (-webkit-min-device-pixel-ratio: 3),
+only screen and (min-resolution: 192dpi),
+only screen and (min-resolution: 3dppx) {
+    .hero-section {
+        background-image: url('../images/backgroundimage@3x.jpg');
+    }
   }
 }
