--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,11 +2,11 @@
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
-    font-size: 26px;
+    font-size: 24px;
     line-height: 1.2;
     color: $colorLogo;
     text-decoration: none;
-    padding: 24px 0;
+    padding: 16px 0;
 
     &--blue {
         color: $colorAccent;
@@ -16,4 +16,12 @@
         color: $colorSecondary;
     }
 
+    @media screen and (min-width: 768px) {
+        padding: 26px 0;
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 26px;
+        padding: 24px 0;
+    }
 }
