--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -1,3 +1,4 @@
+/* 
 .newsletter {
     margin-left: auto;
 
@@ -52,4 +53,107 @@
         fill: $colorSecondary;
         margin-left: 24px;
     }
+} 
+*/
+
+.newsletter {
+    display: block;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-left: auto;
+    align-items: center;
+    text-align: center;
+
+    > label {
+        text-transform: uppercase;
+        font-weight: 700;
+        line-height: 1.2;
+        color: $colorSecondary;
+    }
+}
+
+// Input box
+.newsletter__box {
+
+    > input {
+
+        background-color: transparent;
+        box-shadow: 0px 4px 4px 0px #00000026;
+        border: 1px solid #FFFFFF4D;
+        border-radius: 4px;
+        color: $colorTransparentSecondary;
+        line-height: 1.3;
+        padding: 15px;
+        width: 100%;
+        transition: border $transitionKit;
+        margin: 20px 0;
+
+        &:focus {
+
+            border: 1px solid $colorAccent;
+        }
+    }
+}
+
+// Button
+
+.newsletter__button {
+    background-color: $colorAccent;
+    color: $colorSecondary;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    padding: 10px 28px 10px 42px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 4px 4px 0px #00000026;
+    margin: 0 auto;
+
+    > svg {
+
+        fill: $colorSecondary;
+        margin-left: 24px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .newsletter {
+        display: block;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    
+.newsletter {
+    margin-left: auto;
+    text-align: left;
+}
+
+// Input box
+.newsletter__box {
+    display: flex;
+    margin-top: 20px;
+    gap: 12px;
+
+    > input {
+        width: 360px;
+    }
+}
+
+// Button
+
+.newsletter__button {
+    background-color: $colorAccent;
+    color: $colorSecondary;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    padding: 10px 28px 10px 42px;
+    display: flex;
+    align-items: center;
+
+    > svg {
+        margin-left: 24px;
+    }
+} 
 }
