--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,4 +1,4 @@
-
+/*
 // Main layout
 
 .footer {
@@ -42,4 +42,88 @@
 .footer .container {
     display: flex;
     align-items: baseline;
+}
+*/
+
+// Main layout
+
+.footer {
+    background-color: $backgroundDark;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 60px 0;
+
+    &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    }
+
+    & address {
+        font-style: normal;
+    }
+
+    &__item:not(:last-child) {
+        margin-bottom: 8px;
+    }
+}
+.footer-logo {
+    padding-left: 0;
+}
+
+// Address
+
+.footer__social-link {
+    font-style: normal;
+    text-decoration: none;
+    line-height: 1.7;
+    transition: color $transitionKit;
+
+    &--map {
+        color: $colorSecondary;
+     }
+
+    &--gray {
+        color: $colorTransparentSecondary;
+    }
+
+    &:hover, &:focus {
+        color: $colorAccent;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer .container {
+    display: flex;
+    align-items: baseline;
+    }
+
+    .footer {
+        margin-top: 0;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .footer {
+    background-color: $backgroundDark;
+    padding: 60px 0;
+
+    & address {
+        font-style: normal;
+    }
+
+    &__container {
+        text-align: left;
+    }
+
+    &__item:not(:last-child) {
+        margin-bottom: 9px;
+        
+    }
+}
+.footer-logo {
+    padding-left: 0;
+}
 }
