--- a/sass/utils/_globals.scss
+++ b/sass/utils/_globals.scss
@@ -11,17 +11,35 @@ body {
     color: $colorMainText;
     font-size: 14px;
     letter-spacing: 0.03em;
+    line-height: 1.2;
 }
 
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+  
+    @media screen and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  width: 100%;
   padding: 0 15px;
+  margin: 0 auto;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 .visually-hidden {
@@ -73,16 +91,38 @@ button {
 }
 
 //  Section header
+
+.secondary-header {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 36px;
+      line-height: 1.7;
+      margin-bottom: 50px;
+    }
+}
+
+// Flex settings
+.flex, .paragraphs__list, .what-we-do__list, .team__list, .clients {
+  display: flex;
+  gap: 30px;
+}
+
+/*  //  Section header
 .secondary-header {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.7;
     text-align: center;
     margin-bottom: 50px;
-}
 
-// Flex settings
-.flex, .paragraphs__list, .what-we-do, .team__list, .clients {
-  display: flex;
-  gap: 30px;
-}
+    @media screen and (min-width: 1200px) {
+      font-size: 36px;
+      line-height: 1.7;
+      margin-bottom: 50px;
+    }
+} */
