Mobile menu not visible outside of mobile version

--- a/sass/components/_menu-mobile.scss
+++ b/sass/components/_menu-mobile.scss
@@ -126,3 +126,9 @@
 .is-open .menu__window {
     transform: translateX(100%);
 }
+
+@media screen and (min-width: 768px) {
+    .menu {
+        display: none;
+    }
+}
