--- a/sass/components/_footer-socials.scss
+++ b/sass/components/_footer-socials.scss
@@ -70,3 +70,17 @@
     fill: $colorSecondary;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .footer-button {
+        margin: 0;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .footer-button {
+        align-items: flex-start;
+        margin: 0;
+        margin-left: 70px;
+    }
+}
