--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -118,42 +118,35 @@
 
 @media screen and (min-width: 768px) {
     .newsletter {
-        display: block;
+        display: flex;
+        margin: 0 auto;
+        margin-top: 60px;
+
+        &__box {
+            align-items: center;
+
+            > input {
+                width: 450px;
+            }
+        }
     }
 }
 
 @media screen and (min-width: 1200px) {
     
-.newsletter {
-    margin-left: auto;
-    text-align: left;
-}
+    .newsletter {
+        margin-left: 78px;
+        margin-top: 0;
+        align-items: flex-start;
+    }   
 
 // Input box
-.newsletter__box {
-    display: flex;
-    margin-top: 20px;
-    gap: 12px;
+    .newsletter__box {
+        display: flex;
+        gap: 12px;
 
-    > input {
+        > input {
         width: 360px;
+        }
     }
-}
-
-// Button
-
-.newsletter__button {
-    background-color: $colorAccent;
-    color: $colorSecondary;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.9;
-    padding: 10px 28px 10px 42px;
-    display: flex;
-    align-items: center;
-
-    > svg {
-        margin-left: 24px;
-    }
-} 
 }
