Minor fixes in team and hero section

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -45,7 +45,7 @@
  */
 
 .hero-section {
-  padding: 200px 0;
+  padding: 118px 0;
   text-align: center;
   background-color: $backgroundDark;
   background-image: linear-gradient($backgroundColorGradient, $backgroundColorGradient),
@@ -54,7 +54,7 @@
   background-position: center;
   margin: 0 auto;
   max-width: 1600px;
-  height: 600px;
+  height: 400px;
 
   &__header {
   font-size: 26px;
@@ -90,11 +90,14 @@
 
 @media screen and (min-width: 1200px) {
   .hero-section {
+    max-width: 1600px;
+    height: 600px;
+    padding: 200px 0;
 
     &__header {
       font-size: 44px;
       line-height: 1.9;
-      width: 696px;
+      max-width: 696px;
     }
   }
 }
