--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -158,6 +158,14 @@
 .photo {
   max-width: 450px;
 
+  @media screen and (min-width: 320px) {
+    width: 293px;
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
   @media screen and (min-width: 768px) {
     width: 354px;
     height: 340.883px;
