--- a/sass/components/_hamburger.scss
+++ b/sass/components/_hamburger.scss
@@ -1,15 +1,16 @@
 .menu-toggle {
     background: none;
-    padding-top: 10px;
-    padding-right: 15px;
+    display: flex;
 
-    @media screen and (min-width:748px) {
+    @media screen and (min-width:767px) {
         display: none;
     }
 }
 
 .menu-button {
     transition: $transitionKit;
+    align-items: flex-end;
+    justify-content: end;
 }
 
 .menu-toggle:hover .menu-button {
