--- a/sass/components/_menu-mobile.scss
+++ b/sass/components/_menu-mobile.scss
@@ -122,16 +122,83 @@
     transform: translateX(100%);
     opacity: 1;
 }
-
-@media screen and (min-width: 768px) {
-    .menu {
-        display: none;
-    }
-}
 }
 
 .is-open .menu__window {
     transform: translateX(100%);
+}
+
+@media screen and (min-width: 320px) {
+    .menu {
+        &__contacts-link {
+            font-size: 30px;
+        }
+
+        &__socials {
+            flex-wrap: wrap;
+            row-gap: 10px;
+        }
+
+        &__socials-item {
+
+            &:nth-child(2) {
+                border-right: 0;
+            }
+
+            &:nth-child(3) {
+                padding-left: 0;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 349px) {
+    .menu {
+        &__socials-item {
+
+            &:nth-child(2) {
+                padding-right: 20px;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 359px) {
+    .menu {
+        &__socials-item {
+
+            &:nth-child(2) {
+                padding-right: 10px;
+                border-right: 1px solid $colorInactiveIcon;
+            }
+
+            &:nth-child(3) {
+                padding-left: 10px;
+                padding-right: 0;
+                border-right: 0;
+            }
+
+            &:nth-child(4) {
+                padding-left: 0;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 480px) {
+    .menu {
+        &__socials-item {
+
+            &:nth-child(3) {
+                padding-right: 10px;
+                border-right: 1px solid $colorInactiveIcon;
+            }
+
+            &:nth-child(4) {
+                padding-left: 10px;
+            }
+        }
+    }
 }
 
 @media screen and (min-width: 768px) {
