--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,6 +24,19 @@
     box-shadow: 0px 1px 1px 0px #00000024;
     box-shadow: 0px 1px 3px 0px #0000001F;
     text-align: center;
+
+        @media screen and (max-width: 1199px) {
+            width: 95%;
+            max-width: 450px;
+            height: 95%;
+            max-height: 609px;
+            overflow: scroll;
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: 528px;
+            height: 581px;
+        }
     }
 
     &__close-button {
@@ -41,20 +54,20 @@
         display: block;
         transition: $transitionKit;
     }
-    
-    @media screen and (max-width: 1199px) {
-    width: 95%;
-    max-width: 450px;
-    height: 95%;
-    max-height: 609px;
-    overflow: scroll;
-    }
-    
-    @media screen and (min-width: 1200px) {
-    width: 528px;
-    height: 581px;
+}
+
+.modal {
+    @media screen and (min-width: 320px) {
+        &__submit-button {
+            margin-top: 6px;
+        }
     }
 
+    @media screen and (min-width: 480px) {
+        &__submit-button {
+            margin-top: 30px;
+        }
+    }
 }
 
 .modal__close-button:hover .modal__close-icon,
