--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -148,10 +148,6 @@
     &__nav {
       display: flex;
       align-items: center;
-
-      &:not(:last-child) {
-        margin-right: 0px;
-      }
     }
 }
 
@@ -162,7 +158,6 @@
     margin-left: 83px;
     gap: 60px;
     display: flex;
-    justify-content: space-between;
 
   &--nav-blue {
     position: relative;
@@ -173,7 +168,7 @@
     &::after {
       content: '';
       position: absolute;
-      bottom: -34px;
+      bottom: -33px;
       left: 0;
       width: 100%;
       height: 4px;    
@@ -216,6 +211,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px 0;
+    align-items: center;
   }
 
   &__icon-box {
