--- a/sass/components/_hamburger.scss
+++ b/sass/components/_hamburger.scss
@@ -1,6 +1,5 @@
 .menu-toggle {
     background: none;
-    display: flex;
 
     @media screen and (min-width:767px) {
         display: none;
@@ -9,8 +8,9 @@
 
 .menu-button {
     transition: $transitionKit;
-    align-items: flex-end;
-    justify-content: end;
+    position: absolute;
+    top: 10px;
+    right: 15px;
 }
 
 .menu-toggle:hover .menu-button {
